--- a/devices/rpi/rpi4/devices.yml
+++ b/devices/rpi/rpi4/devices.yml
@@ -11,48 +11,50 @@ models:
 
 # Image creation
 image:
-  # Image size
-  size: 5120
-  # Partition table type
-  # can be dos | gpt
-  map: gpt
-  # Sector size
-  sector: 512
-  # Start of the first partition (sectors)
-  start: 2048
+  common:
+    # Image size
+    size: 5120
+    # Partition table type
+    # can be dos | gpt
+    map: gpt
+    # Sector size
+    sector: 512
+    # Start of the first partition (sectors)
+    start: 2048
 
 # Partitions of that image
 partitions:
-  -
-    # Partition number
-    num: 1
-    # Partition name
-    name: 'boot'
-    # Partition size (MiB)
-    # -1 for the entire image
-    size: 100
-    # Partition type
-    # Please use GUID for GPT, two-digit hex number for MBR
-    type: 'C12A7328-F81F-11D2-BA4B-00A0C93EC93B'
-    # Filesystem for this partition
-    # can be vary | raw (does not format)
-    fs: 'vfat'
-    # Mount point of this partition
-    # Can be vary | none (don't mount)
-    mount: '/boot/rpi'
-    # Some extra settings
-    # file: file to flash in this partition.
-    # This is convenient for flashing bootloaders in a partition.
-    # The image file should be placed in images/ folder under current device folder.
-    # mountopt: Mount options for current partition.
-    # This will be placed directly in the fstab and mount command.
-  -
-    num: 2
-    name: 'aosc'
-    size: -1
-    type: '0FC63DAF-8483-4772-8E79-3D69D8477DE4'
-    fs: 'ext4'
-    mount: '/'
+  common:
+    -
+      # Partition number
+      num: 1
+      # Partition name
+      name: 'boot'
+      # Partition size (MiB)
+      # -1 for the entire image
+      size: 100
+      # Partition type
+      # Please use GUID for GPT, two-digit hex number for MBR
+      type: 'C12A7328-F81F-11D2-BA4B-00A0C93EC93B'
+      # Filesystem for this partition
+      # can be vary | raw (does not format)
+      fs: 'vfat'
+      # Mount point of this partition
+      # Can be vary | none (don't mount)
+      mount: '/boot/rpi'
+      # Some extra settings
+      # file: file to flash in this partition.
+      # This is convenient for flashing bootloaders in a partition.
+      # The image file should be placed in images/ folder under current device folder.
+      # mountopt: Mount options for current partition.
+      # This will be placed directly in the fstab and mount command.
+    -
+      num: 2
+      name: 'aosc'
+      size: -1
+      type: '0FC63DAF-8483-4772-8E79-3D69D8477DE4'
+      fs: 'ext4'
+      mount: '/'
 
 # Storage device
 storage:
