devices.rpi.rpi3: add bootable flag to part1

--- a/devices/rpi/rpi3/devices.yml
+++ b/devices/rpi/rpi3/devices.yml
@@ -23,6 +23,7 @@ partitions:
       type: 0c
       fs: vfat
       mount: /boot/rpi
+      bootable: yes
     -
       # Two primary partitions is enough.
       num: 2
